--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,6 +3,13 @@
   font-weight: 400;
   line-height: 21.78px;
   color: #545454;
+  margin: 0;
+  padding: 0;
+}
 
-  padding: 66px 0 60px;
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 16.94px;
+  }
 }
