--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   max-width: 880px;
   min-height: 74px;
-  margin: auto;
+  margin: 0 auto;
   padding-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
