--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,8 @@
 .popup__container {
   margin: auto;
   width: 430px;
-  height: 330px;
-  background-color: #ffffff;
+  padding: 34px 36px 37px;
+  background-color: #fff;
   border-radius: 10px;
   position: relative;
 }
@@ -10,6 +10,6 @@
 @media screen and (max-width: 1023px) {
   .popup__container {
     width: 282px;
-    height: 322px;
+    padding: 25px 22px;
   }
 }
