--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,11 +1,13 @@
 .profile__add-button {
   background-image: url(../../../images/addbutton.svg);
   background-repeat: no-repeat;
-  background-position: center;
-  background-color: black;
+  background-position: center center;
+  background-size: 22px 22px;
+  background-color: transparent;
+  border-radius: 2px;
   width: 150px;
   height: 50px;
-  border: 2px solid #ffffff;
+  border: 2px solid #fff;
   cursor: pointer;
   justify-self: flex-end;
   grid-area: addbutton;
@@ -19,7 +21,7 @@
   .profile__add-button {
     justify-self: center;
     width: 282px;
-    height: 50px;
+    background-size: 16px 16px;
     margin-top: 34px;
   }
 }
