--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,4 +1,4 @@
-.profile-info {
+.profile__info {
   display: grid;
   grid-template-columns: 1fr auto;
   justify-items: start;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 1023px) {
-  .profile-info {
+  .profile__info {
     margin-top: 26px;
     grid-column-gap: 10px;
     justify-items: center;
