--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,10 +7,13 @@
 }
 @font-face {
   font-family: "Inter";
-  font-weight: 700;
-  src: local("Inter Bold"), url(Inter-Bold.woff2) format("woff2"),
-    url(Inter-Bold.woff) format("woff"), url(Inter-Bold.ttf) format("truetype");
+  font-style: normal;
+  font-weight: 500;
+  src: local("Inter Medium"), url(Inter-Medium.woff2) format("woff2"),
+    url(Inter-Medium.woff2) format("woff"),
+    url(Inter-Medium.ttf) format("truetype");
 }
+
 @font-face {
   font-family: "Inter";
   font-weight: 900;
