--- a/blocks/card/__text/card__text.css
+++ b/blocks/card/__text/card__text.css
@@ -1,16 +1,13 @@
 .card__text {
   font-size: 24px;
   font-weight: 900;
-  line-height: 29.05px;
+  line-height: 29px;
   color: black;
   grid-area: text;
+  margin-top: 25px;
   margin-left: 21px;
+  margin-bottom: 26px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-
-.h2 {
-  margin: 0;
-  padding: 0;
 }
