--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,3 +1,9 @@
 .body {
   background-color: black;
+
+  max-width: 880px;
+  width: 100%;
+  margin: auto;
+  min-height: 100vh;
+  font-family: "Inter", Arial, sans-serif;
 }
