--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,9 @@
 .footer__copyright {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
   font-size: 18px;
   font-weight: 400;
-  line-height: 21.78px;
+  line-height: 22px;
   color: #545454;
   margin: 0;
   padding: 0;
@@ -10,6 +12,6 @@
 @media screen and (max-width: 767px) {
   .footer__copyright {
     font-size: 14px;
-    line-height: 16.94px;
+    line-height: 17px;
   }
 }
