--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -3,7 +3,8 @@
   background-repeat: no-repeat;
   background-color: transparent;
   background-position: center center;
-  border: none;
+  background-size: cover;
+  border: 0;
   position: absolute;
   height: 32px;
   width: 32px;
