--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,13 +1,13 @@
 .popup__container {
-  margin: auto;
   width: 430px;
   padding: 34px 36px 37px;
   background-color: #fff;
   border-radius: 10px;
   position: relative;
+  box-sizing: border-box;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
   .popup__container {
     width: 282px;
     padding: 25px 22px;
