--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -3,19 +3,27 @@
   height: 50px;
   color: #fff;
   background: #000;
-
+  border: 0;
+  border-radius: 2px;
   cursor: pointer;
   text-align: center;
   margin-top: 48px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 50px;
 }
 
 .popup__save-button:hover {
   opacity: 0.8;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
   .popup__save-button {
     width: 238px;
     height: 46px;
+    margin-top: 45px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
