--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,15 +4,15 @@
   font-size: 24px;
   line-height: 29px;
   color: #000;
-  padding: 0;
+  padding: 0px 0px 43px 0px;
   margin-top: 0;
-  margin-bottom: 45px;
-  margin-left: 31px;
+  margin-right: 0px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
   .popup__title {
     font-size: 18px;
-    line-height: 21.78px;
+    line-height: 22px;
+    padding: 0px 0px 75px 0px;
   }
 }
