--- a/blocks/popup/__value/popup__value.css
+++ b/blocks/popup/__value/popup__value.css
@@ -1,9 +1,13 @@
 .popup__value {
   width: 100%;
   margin-bottom: 31px;
+  padding-bottom: 8px;
   border: none;
-
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 .popup__value:last-of-type {
