--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
-@import url(../normalize/normalize.css);
-@import url(../fonts/fonts.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts/fonts.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/body/body.css);
