--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -5,8 +5,7 @@
   line-height: 29px;
   color: #000;
   padding: 0px 0px 43px 0px;
-  margin-top: 0;
-  margin-right: 0px;
+  margin: 0;
 }
 
 @media screen and (max-width: 767px) {
