--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -14,6 +14,8 @@
 @media screen and (max-width: 767px) {
   .profile__subtitle {
     font-size: 14px;
-    line-height: 16.94px;
+    line-height: 17px;
+    max-width: 200px;
+    margin: 0 0 0 24px;
   }
 }
