--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,5 @@
 .profile__title {
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: 'Inter', 'Arial', 'sans-serif';
   font-style: normal;
   font-size: 42px;
   font-weight: 500;
@@ -16,5 +16,7 @@
   .profile__title {
     font-size: 27px;
     line-height: 33px;
+    max-width: 200px;
+    margin: 0 0 0 24px;
   }
 }
