--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,6 +8,6 @@
 @media screen and (max-width: 1023px) {
   .footer {
     padding: calc(25px / 2) 0 36px;
-    margin-left: 19px;
+    width: calc(100% - 38px);
   }
 }
