--- a/blocks/card/__heart/_active/card__heart_active.css
+++ b/blocks/card/__heart/_active/card__heart_active.css
@@ -1,3 +1,3 @@
 .card__heart_active {
-  background-image: url("../../../../images/heart_yes.svg");
+  background-image: url(../../../../images/heart_yes.svg);
 }
