--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -9,6 +9,7 @@
   grid-template-rows: 1fr;
   column-gap: 25px;
   grid-template-areas:
-    "image image"
-    "text heart";
+    'image image'
+    'text heart';
+  position: relative;
 }
