--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,11 +4,14 @@
   height: 100vh;
   position: fixed;
   overflow: hidden;
-  display: none;
+  display: flex;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
+  visibility: hidden;
 }
