--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 @import url(../blocks/card/__heart/_active/card__heart_active.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__text/card__text.css);
+@import url(../blocks/card/__trash/card__trash.css);
 
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/footer.css);
@@ -33,3 +34,7 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__form/popup__form.css);
+
+@import url(../blocks/popup/__preview/popup__preview.css);
+@import url(../blocks/popup/__image-view/popup__image-view.css);
+@import url(../blocks/popup/__view-text/popup__view-text.css);
