--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,8 @@
 @import url(../blocks/popup/__preview/popup__preview.css);
 @import url(../blocks/popup/__image-view/popup__image-view.css);
 @import url(../blocks/popup/__view-text/popup__view-text.css);
+
+@import url(../blocks/popup/__save-button/_inactive/popup__save-button_inactive.css);
+@import url(../blocks/popup/__span-error/popup__span-error.css);
+@import url(../blocks/popup/__span-error/_active/popup__span-error_active.css);
+@import url(../blocks/popup/__value/_type_error/popup__value_type_error.css);
