--- a/blocks/popup/__span-error/popup__span-error.css
+++ b/blocks/popup/__span-error/popup__span-error.css
@@ -1,6 +1,6 @@
 .popup__span-error {
   display: block;
-  color: #ff0000;
+  color: red;
   min-height: 31px;
   max-width: 358px;
   font-size: 12px;
